--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "dev": "NODE_ENV=development nodemon server/server.js --open & NODE_ENV=development webpack-dev-server --open --hot"
+    "dev": "NODE_ENV=development nodemon server/server.js --open & NODE_ENV=development webpack-dev-server --open --hot",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -34,10 +35,12 @@
     "eslint-plugin-react": "^7.28.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "sass": "^1.49.7",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "supertest": "^6.2.2",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
