--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.3",
+    "@googlemaps/react-wrapper": "^1.1.25",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
     "@reduxjs/toolkit": "^1.7.2",
@@ -71,7 +72,6 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
