--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
