--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "dev": "NODE_ENV=development nodemon server/server.js --open & NODE_ENV=development webpack-dev-server --open --hot",
-    "test": "jest --verbose"
+    "test": "jest --verbose --detectOpenHandles",
+    "test-o": "jest --verbose --detectOpenHandles"
   },
   "repository": {
     "type": "git",
